--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -295,125 +295,125 @@
 /* Button Tooltips */
 /* Mute Tooltip */
 /* Zoom Level 50% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 1337px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 1325px;"] {
        left: 198px !important;
        top: 1375.866px !important;
 }
 /* Zoom Level 67% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 120.933px; top: 973.679px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 120.933px; top: 964.724px;"] {
        left: 196px !important;
        top: 1010.966px !important;
 }
 /* Zoom Level 75% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 858px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 850px;"] {
        left: 196px !important;
        top: 897.566px !important;
 }
 /* Zoom Level 80% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 120.996px; top: 798.012px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 120.996px; top: 790.512px;"] {
        left: 198px !important;
        top: 835.566px !important;
 }
 /* Zoom Level 90% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 120.998px; top: 698.014px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 120.998px; top: 691.347px;"] {
        left: 198px !important;
        top: 737.566px !important;
 }
 /* Zoom Level 100% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 617px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 611px;"] {
        left: 198px !important;
        top: 655.566px !important;
 }
 /* Deafen Tooltip */
 /* Zoom Level 50% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px; top: 1337px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px; top: 1325px;"] {
      left: 222px !important;
      top: 1375.866px !important;
 }
 /* Zoom Level 67% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.429px; top: 973.679px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.429px; top: 964.724px;"] {
      left: 222px !important;
      top: 1010.966px !important;
 }
 /* Zoom Level 75% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.5px; top: 858px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.5px; top: 850px;"] {
      left: 222px !important;
      top: 897.566px !important;
 }
 /* Zoom Level 80% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 145.988px; top: 798.012px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 145.988px; top: 790.512px;"] {
      left: 222px !important;
      top: 835.566px !important;
 }
 /* Zoom Level 90% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.495px; top: 698.014px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.495px; top: 691.347px;"] {
      left: 222px !important;
      top: 737.566px !important;
 }
 /* Zoom Level 100% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px; top: 617px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px; top: 611px;"] {
      left: 222px !important;
      top: 655.566px !important;
 }
 /* UnMute Tooltip */
 /* Zoom Level 50% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 1337px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 1325px;"] {
        left: 187px !important;
        top: 1375.866px !important;
 }
 /* Zoom Level 67% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 109.933px; top: 973.679px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.933px; top: 964.724px;"] {
        left: 187px !important;
        top: 1010.966px !important;
 }
 /* Zoom Level 75% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 109.5px; top: 858px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.5px; top: 850px;"] {
        left: 187px !important;
        top: 897.566px !important;
 }
 /* Zoom Level 80% */
-[class="tooltip tooltip-top tooltip-black"][style="left: 109.496px; top: 798.012px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.496px; top: 790.512px;"] {
        left: 187px !important;
        top: 835.566px !important;
 }
 /* Zoom Level 90% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 109.998px; top: 698.014px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.998px; top: 691.347px;"] {
        left: 187px !important;
        top: 737.566px !important;
 }
 /* Zoom Level 100% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 617px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 611px;"] {
        left: 187px !important;
        top: 655.566px !important;
 }
 /* UnDeafen  Tooltip */
 /* Zoom Level 50% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 1337px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 1325px;"] {
      left: 215px !important;
      top: 1375.866px !important;
 }
 /* Zoom Level 67% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.429px; top: 973.679px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.429px; top: 964.724px;"] {
      left: 215px !important;
      top: 1010.966px !important;
 }
 /* Zoom Level 75% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 858px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 850px;"] {
      left: 215px !important;
      top: 897.566px !important;
 }
 /* Zoom Level 80% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.488px; top: 798.012px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.488px; top: 790.512px;"] {
      left: 215px !important;
      top: 835.566px !important;
 }
 /* Zoom Level 90% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.995px; top: 698.014px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.995px; top: 691.347px;"] {
      left: 215px !important;
      top: 737.566px !important;
 }
 /* Zoom Level 100% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 617px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 611px;"] {
      left: 215px !important;
      top: 655.566px !important;
 }
@@ -546,7 +546,7 @@
 [class*="iconInactive-WWHQEI icon-mr9wAc popout-open iconMargin-2Js7V9"][name*="Pin"] {
        background-image: url(https://png.icons8.com/material/24/cccccc/pin.png);
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group {
     background-color: black !important;
     border-color: transparent;
 }
@@ -913,7 +913,7 @@ a,
     border-color: transparent;
 }
 /* Search, Mention, Pins and such */
-.theme-dark .popout .messages-popout-wrap .header {
+.theme-dark .messagesPopoutWrap-1VBR-j .header-y_zptc {
     background-color: #18191c !important;
     box-shadow: none;
 }
@@ -946,7 +946,7 @@ a,
     border-top: 2px solid black;
 }
 
-.theme-dark .popout .messages-popout-wrap {
+.theme-dark .messagesPopoutWrap-1VBR-j {
     background-color: #232428 !important;
     border: none;
     box-shadow: none;
@@ -955,7 +955,8 @@ a,
     background: #1d1f23;
     box-shadow: none;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group:hover .actionButtons-LKmOj2
+ {
     background: none !important;
     box-shadow: none !important;
 }
@@ -963,7 +964,8 @@ a,
 .theme-dark .themed-popout .text {
     color: white;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button,
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group .actionButtons-LKmOj2 .jumpButton-1CVJpO
+,
 .theme-dark .search-results-wrap .action-buttons .jump-button {
     background-color: #5D4037 !important;
     color: white;
@@ -1386,6 +1388,11 @@ a,
 .guilds-wrapper .guilds .friends-icon {
     background-image: url(https://png.icons8.com/material/48/FFFFFF/chat.png);
 }
+.theme-dark .themed-popout .header,
+.theme-dark .themed-popout, 
+.theme-dark .themed-popout .footer {
+   background-color: #1C1B19;
+}
 .theme-dark #friends .friends-table .friends-table-header,
 .theme-dark #friends .friends-table .friends-row+.friends-row {
     border: none;
@@ -1502,7 +1509,7 @@ a,
     border-color: transparent;
     color: white;
 }
-.dark-2Ll8iS span {
+.theme-dark .keybindShortcut-tTramc span {
     background-color: #4E342E;
     border-color: transparent;
     box-shadow: 0 5px 6px black;
@@ -1516,10 +1523,11 @@ a,
 .theme-dark .input-MwQhcX:focus {
     border: 2px solid #7CB342;
 }
-.dark-2Ll8iS span .bindArrow-3Mm64N g {
+.theme-dark .keybindShortcut-tTramc span .bindArrow-3Mm64N g {
     fill: white !important;
 }
-.dark-2Ll8iS span:active {
+.theme-dark .keybindShortcut-tTramc span:active {
+
     box-shadow: none;
     color: silver;
 }
