--- a/Luigi.theme.css
+++ b/Luigi.theme.css
@@ -1026,7 +1026,7 @@ a {
     margin: 0 auto;
     color: white;
 }
-.theme-dark .popout .messages-popout-wrap {
+.theme-dark .messagesPopoutWrap-1VBR-j {
     background-color: #284A12 !important /* Darker Color */;
     border: 3px solid #019000 /* Border Color */;
 }
@@ -1048,10 +1048,11 @@ a {
     background-color: #284A12 /* Darker Color */;
     color: white;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group {
    background-color: green;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button, .theme-dark .search-results-wrap .action-buttons .jump-button {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group .actionButtons-LKmOj2 .jumpButton-1CVJpO
+, .theme-dark .search-results-wrap .action-buttons .jump-button {
     background: #019000 !important /* Middle Color */;
     color: white !important;
     border: 3px solid #019000 /* Border Color */;
@@ -1061,7 +1062,8 @@ a {
     border-top: none;
     color: white;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group:hover .actionButtons-LKmOj2
+ {
     background: none;
     box-shadow: none;
 }
@@ -1163,9 +1165,34 @@ a {
 }
 
 /* Friends/DMs Place */
+.theme-dark .messagesPopoutWrap-1VBR-j .header-y_zptc {
+    background-color: #019000;
+    box-shadow: none;
+}
+.theme-dark #friends .tab-bar .tab-bar-item.selected .badge {
+    background-color: #019000;
+    color: #fff;
+}
+
+.theme-dark .private-channel-recipients-invite .friend.selected, 
+.theme-dark .private-channel-recipients-invite .friend:hover {
+    background: linear-gradient(90deg,black 85%,#019000) !important;
+}
+.theme-dark .themed-popout .header {
+    background-color: #019000 !important;
+}
+.theme-dark .themed-popout,
+.theme-dark .themed-popout .footer,
+.theme-dark .private-channel-recipients-invite .friend,
+.search-bar-tag {
+    background-color: black;
+    border: none;
+    box-shadow: none;
+}
 .theme-dark #friends .friends-table .friends-table-header {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
+
 .theme-dark .private-channels .search-bar {
     background-color: rgba(0, 0, 0, 0.2);
 }
