--- a/Peach.theme.css
+++ b/Peach.theme.css
@@ -931,7 +931,8 @@ a {
 [class*="option selected"] {
     background: #F14E91 !important;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group:hover .actionButtons-LKmOj2
+ {
     background-color: transparent;
     box-shadow: none !important;
 }
@@ -1040,7 +1041,7 @@ a {
     margin: 0 auto;
     color: white;
 }
-.theme-dark .popout .messages-popout-wrap {
+.theme-dark .messagesPopoutWrap-1VBR-j {
     background-color: #F33C88 !important /* Darker Color */;
     border: 3px solid #F599B2 /* Border Color */;
 }
@@ -1064,7 +1065,8 @@ a {
     background-color: #F33C88 /* Darker Color */;
     color: white;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button, .theme-dark .search-results-wrap .action-buttons .jump-button {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group .actionButtons-LKmOj2 .jumpButton-1CVJpO
+, .theme-dark .search-results-wrap .action-buttons .jump-button {
     background: #f7517d !important /* Middle Color */;
     color: white !important;
     border: 3px solid #F599B2 /* Border Color */;
@@ -1169,6 +1171,29 @@ a {
 }
 
 /* Friends/DMs Place */
+.theme-dark .messagesPopoutWrap-1VBR-j .header-y_zptc {
+    background-color: #F599B2;
+    box-shadow: none;
+}
+.theme-dark .private-channel-recipients-invite .friend.selected, 
+.theme-dark .private-channel-recipients-invite .friend:hover {
+    background: linear-gradient(90deg,black 85%,#F599B2) !important;
+}
+.theme-dark #friends .tab-bar .tab-bar-item.selected .badge {
+    background-color: #F599B2;
+    color: #fff;
+}
+.theme-dark .themed-popout,
+.theme-dark .themed-popout .footer,
+.theme-dark .private-channel-recipients-invite .friend,
+.search-bar-tag {
+    background-color: black;
+    border: none;
+    box-shadow: none;
+}
+.theme-dark .themed-popout .header {
+    background-color: #F599B2 !important;
+}
 .theme-dark #friends .friends-table .friends-table-header {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
