--- a/TheGreenChristmas.theme.css
+++ b/TheGreenChristmas.theme.css
@@ -1105,7 +1105,7 @@ a {
     color: white;
     border: 1px solid #10b51d;
 }
-.theme-dark .popout .messages-popout-wrap {
+.theme-dark .messagesPopoutWrap-1VBR-j {
     background-color: black !important;
     border: none;
     box-shadow: none;
@@ -1115,7 +1115,7 @@ a {
 .theme-dark .protip-q743VF.popout-footer .tip {
     color: #10b51d !important;
 }
-.theme-dark .popout .messages-popout-wrap .header {
+.theme-dark .messagesPopoutWrap-1VBR-j .header-y_zptc {
    background-color: black !important;
 }
 .header-2Lg0Oe {
@@ -1130,7 +1130,7 @@ a {
     padding-bottom: 3px;
     border: 1px solid #10b51d;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group {
     background-color: black !important;
     border: 1px solid #10b51d !important;
 }
@@ -1139,7 +1139,8 @@ a {
     box-shadow: none !important;
     background: none !important;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button:hover {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group .actionButtons-LKmOj2 .jumpButton-1CVJpO
+:hover {
     color: rgb(255, 255, 255);
 }
 .theme-dark .themed-popout .header .subtitle, 
@@ -1147,14 +1148,16 @@ a {
 .theme-dark .recent-mentions-popout .mention-filter .label {
     color: rgb(255, 255, 255) !important;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group:hover .actionButtons-LKmOj2
+ {
     background: black !important;
     box-shadow: none !important;
 }
 .theme-dark .messages-popout-wrap .messages-popout .channel-separator .guild-name {
     color: white;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group .actionButtons-LKmOj2 .jumpButton-1CVJpO
+ {
     background-color: black !important;
     color: white;
 }
@@ -1440,6 +1443,12 @@ a {
     color: rgba(255, 255, 255, 0.3);
 }
 /* Friend and DMs (Finally) */
+.theme-dark .themed-popout .header,
+.theme-dark .themed-popout,
+.theme-dark .themed-popout .footer {
+    background-color: black;
+    box-shadow: none;
+}
 .private-channels .channel.selected a {
     background-color: rgba(0,0,0,.6);
     color: #10b51d;
@@ -1548,7 +1557,7 @@ a {
     background: black;
     color: #10b51d;
 }
-.theme-dark .popout .messages-popout-wrap .footer {
+.theme-dark .messagesPopoutWrap-1VBR-j .footer-dHccYB{
     background-color: black;
 }
 .private-channel-recipients-invite .footer button {
