--- a/Twitch.theme.css
+++ b/Twitch.theme.css
@@ -475,7 +475,7 @@
        background-image: url(https://png.icons8.com/ultraviolet/40/FFFFFF/pin.png);
        background-size: cover;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group {
     background-color: black !important;
     border-color: transparent;
 }
@@ -811,7 +811,7 @@ a,
     border-radius: 0px;
 }
 /* Search, Mention, Pins and such */
-.theme-dark .popout .messages-popout-wrap .header {
+.theme-dark .messagesPopoutWrap-1VBR-j .header-y_zptc {
     background-color: black !important;
     box-shadow: none;
 }
@@ -845,7 +845,7 @@ a,
     border-top: 2px solid black;
 }
 
-.theme-dark .popout .messages-popout-wrap {
+.theme-dark .messagesPopoutWrap-1VBR-j {
     background-color: black !important;
     border: none;
     box-shadow: none;
@@ -874,7 +874,8 @@ a,
     background: black;
     box-shadow: none;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group:hover .actionButtons-LKmOj2
+ {
     background: none !important;
     box-shadow: none !important;
 }
@@ -882,7 +883,7 @@ a,
 .theme-dark .themed-popout .text {
     color: white;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button,
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group .actionButtons-LKmOj2 .jumpButton-1CVJpO,
 .theme-dark .search-results-wrap .action-buttons .jump-button {
     background-color: #503483 !important;
     color: white;
@@ -1276,11 +1277,20 @@ a,
     background-size: 36px 36px;
 }
 /* Friends and DMs */
+.theme-dark .themed-popout .header,
+.theme-dark .themed-popout,
+.theme-dark .themed-popout .footer,
+.private-channel-recipients-invite .header .search-bar {
+    background-color: black;
+}
 .guilds-wrapper .guilds .friends-icon {
     background-image: url(https://png.icons8.com/ios/40/FFFFFF/speech-bubble.png);
 }
 .guilds-wrapper .guilds .friends-icon {
     background-color: #6441a4;
+}
+.private-channel-recipients-invite .body .scroller::-webkit-scrollbar-thumb {
+   background-color: #6441a4;
 }
 .guilds-wrapper .guilds .friends-icon:hover {
     background-color: #503483 !important;
@@ -1385,7 +1395,7 @@ a,
 }
 .theme-dark .private-channel-recipients-invite .friend.selected, 
 .theme-dark .private-channel-recipients-invite .friend:hover {
-    background: #212121;
+    background: linear-gradient(90deg,black 85%,#6441a4);
 }
 .private-channel-recipients-invite .footer button {
     background-color: #503483 !important;
@@ -1406,7 +1416,7 @@ a,
     border-color: transparent;
     color: white;
 }
-.dark-2Ll8iS span {
+.theme-dark .keybindShortcut-tTramc span {
     background-color: #4527A0;
     border-color: transparent;
     box-shadow: 0 5px 6px black;
@@ -1420,10 +1430,11 @@ a,
 .theme-dark .input-MwQhcX:focus {
     border: 2px solid #00C853;
 }
-.dark-2Ll8iS span .bindArrow-3Mm64N g {
+.theme-dark .keybindShortcut-tTramc span .bindArrow-3Mm64N g {
     fill: white !important;
 }
-.dark-2Ll8iS span:active {
+.theme-dark .keybindShortcut-tTramc span:active {
+
     box-shadow: none;
     color: silver;
 }
